# Crypto

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  benchmark_arithmetic.cpp  benchmark_multiplication.cpp  performance_timer.h
example/: CMakeLists.txt  main.cpp
factorization/: CMakeLists.txt  factorization-main.cpp  main.cpp
include/: BigInt.h  BigUint.h  Primality.h
resources/: factorization.txt
src/: BigInt.cpp  BigUint.cpp  CMakeLists.txt  Primality.cpp
tests/: BigIntTest.cpp  BigUintTest.cpp  CMakeLists.txt
